apps/staging/homepage/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: homepage
  annotations:
    external-dns.alpha.kubernetes.io/hostname: home.staging.home.lewelly.com
    cert-manager.io/cluster-issuer: letsencrypt-production
  labels:
    app.kubernetes.io/part-of: home-infra
spec:
  ingressClassName: traefik
  tls:
    - secretName: home-staging-tls-secret
      hosts:
        - home.staging.home.lewelly.com
  rules:
    - host: home.staging.home.lewelly.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  number: 3000
